--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,7 @@
-/*
-
-This CSS file will be included with your plugin, and
-available in the app when your plugin is enabled.
-
-If your plugin does not need CSS, delete this file.
-
-*/
+.plugin-generate-slug-settings-input {
+	width: 300px;
+}
+.plugin-generate-slug-settings-textarea {
+	width: 300px;
+	height: 500px;
+}
